--- a/client/css/color.css
+++ b/client/css/color.css
@@ -14,6 +14,7 @@
   --gray-700: #404040;
   --gray-800: #2b2b2b;
   --gray-900: #151515;
+  --gray-bar: #d9d9d9;
   --accent-yellow: #fa622f;
   --blue-100: #cce0ff;
   --blue-200: #99c2ff;
