--- a/client/css/reset.css
+++ b/client/css/reset.css
@@ -7,6 +7,18 @@ body *::after {
   box-sizing: border-box;
 }
 
+ul, ol, dl, dd, dt, li {
+  list-style-type: none;
+  margin: 0;
+  padding:0;
+}
+
+button {
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -18,4 +30,21 @@ body {
   background-color:  #ffffff;
   margin: 0;
   padding: 0;
+}
+
+input[type="search"] {
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+input::-ms-clear,
+input::-ms-reveal{
+	display:none;width:0;height:0;
+}
+input::-webkit-search-decoration,
+input::-webkit-search-cancel-button,
+input::-webkit-search-results-button,
+input::-webkit-search-results-decoration{
+	-webkit-appearance: none;
+  
 }
