--- a/client/css/reset.css
+++ b/client/css/reset.css
@@ -12,6 +12,15 @@ html, body {
   height: 100%;
 }
 
+body {
+  font-family: "Pretendard";
+  font-weight: normal;
+  background-color:  #ffffff;
+  margin: 0;
+  padding: 0;
+}
+
+
 div, p, ul, li, table, th, td, textarea, input, span, form, h1, h2, h3, h4, h5, h6, dt, dl, dd, em, sup{
   padding:0;
   margin:0;
@@ -41,19 +50,12 @@ button {
   margin: 0;
   background: #ffffff;
   cursor: pointer;
+  font-family: "Pretendard";
 }
 
 a {
   color: inherit;
   text-decoration: none;
-}
-
-body {
-  font-family: Pretendard;
-  font-weight: normal;
-  background-color:  #ffffff;
-  margin: 0;
-  padding: 0;
 }
 
 input[type="search"] {
