[chore] 상단 header hover 수정 #9

--- a/client/css/common.css
+++ b/client/css/common.css
@@ -298,6 +298,10 @@
   padding: 8px 0px 8px 12px;
 }
 
+.category li:hover {
+  background-color: var(--gray-100);
+}
+
 .category li:hover a{
   color: var(--purple);
 }
