--- a/client/css/common.css
+++ b/client/css/common.css
@@ -180,10 +180,12 @@
 
 .searchForm_group {
   width: 400px;
+  display: relative;
+  /* display: flex;
+  flex-direction: row; */
 }
 
 .formInput {
-  position: relative;
   width: 100%;
   height: 60px;
   padding: 13px 20px;
@@ -211,11 +213,14 @@
   outline: none;
 }
 
-.formInput button {
-  width: 34px;
-  height: 34px;
+.search_btn {
+  position: absolute;
+  top: 16px;
+  right: 20px;
+  width: 32px;
+  height: 32px;
   background: transparent url(../assets/icons/Icon/search.png) center / 32px no-repeat;
-  margin-left: 20px;
+  /* margin-left: 20px; */
   vertical-align: bottom;
 }
 
@@ -379,10 +384,6 @@ footer {
   padding-top: 28px;
 }
 
-.consumer {
-  width: 477px;
-}
-
 .consumer_wrap {
   display: flex;
   flex-flow: row nowrap;
@@ -454,10 +455,6 @@ footer {
 
 .question_email a {
   color: var(--purple);
-}
-
-.company {
-  width: 486px;
 }
 
 .company_menu_wrap {
