[chore] 상품후기 추천 수 및 정렬 버튼 레이아웃 작업  #15

--- a/client/css/page_productDetail.css
+++ b/client/css/page_productDetail.css
@@ -1,12 +1,12 @@
 .product-review-wrapper {
-  background-color: aqua;
+  /* background-color: aqua; */
   width: 1050px;
   margin: 0 auto;
 }
 
 .product-review-header {
-  background-color: orange;
   position: relative;
+  margin-bottom: 56px;
 }
 
 .write-btn {
@@ -18,4 +18,42 @@
   width: 155px;
   height: 44px;
   border-radius: 4px;
+}
+
+.review-benefit {
+  margin-top: 24px;
+  font-weight: bold;
+}
+
+.review-benefit li{
+  list-style-type: disc;
+  margin-left: 20px;
+  font-weight: 400;
+  font-size: small;
+}
+
+.count-n-sort {
+  position: relative;
+}
+
+.review-count {
+  font-size: small;
+  display: inline-block;
+}
+
+.sort-btns {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: transparent;
+  font-size: medium;
+}
+
+.view-by-recommend {
+  font-weight: bold;
+  
+}
+
+.view-by-recent {
+  color: #A6A6A6;
 }
