[chore] main에서 장바구니와 관련된 부분 마크업 #23

--- a/client/css/page_productDetail.css
+++ b/client/css/page_productDetail.css
@@ -154,7 +154,7 @@ body {
   /* display: inline-block; */
 }
 
-.buy button {
+.minus_amount, .plus_amount {
   border: 0;
   background-color: transparent;
   width: 30px;
@@ -172,7 +172,7 @@ body {
   font-size: 12px;
 }
 
-.total_price {
+.total_price_1 {
   font-weight: 600;
   font-size: 12.003px;
   line-height: 150%;
@@ -189,9 +189,100 @@ body {
   border-bottom: 1px solid #E1E1E1;
 }
 
-/* .minus_amount svg {
-  background-color: pink;
+.calc_total_price {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  /* background-color: yellow; */
 }
-.plus_amount svg{
-  background-color: pink;
-} */
+
+.calc_total_price span:nth-child(1) {
+  /* background-color: yellowgreen; */
+  height: 24px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 150%;
+  color: #000000;
+}
+
+.calc_total_price span:nth-child(3) {
+  /* background-color: skyblue; */
+  height: 22px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 140%;
+  color: #333333;
+  margin-left: 4px;
+}
+
+.total_price_2 {
+  height: 43px;
+  font-weight: 600;
+  color: #333333;
+  line-height: 150%;
+  font-size: 28.43px;
+  /* background-color: pink; */
+  margin-left: 17px;
+}
+
+.point {
+  /* background: blue; */
+  display: flex;
+  align-items: center;
+  margin-top: 8px;
+  justify-content: flex-end;
+}
+
+.point div {
+  padding: 4px 8px;
+  width: 34px;
+  height: 24px;
+  background: #FA622F;
+  border-radius: 12px;
+  display: flex;
+  align-items: flex-start;
+  gap: 4px;
+}
+
+.point span:nth-child(1) {
+  width: 18px;
+  height: 16px;
+  font-weight: 400;
+  color: #FFFFFF;
+  font-size: 10px;
+  line-height: 160%;
+}
+
+.point span:nth-child(2) {
+  margin-left: 6px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 150%;
+  color: #000000;
+}
+
+
+.like svg, .alarm svg, .like, .alarm {
+  width: 56px;
+  height: 56px;
+  display: inline-block;
+}
+
+.push_cart {
+  width: 424px;
+  height: 54px;
+  border-radius: 4px;
+  background: #5F0080;
+  padding: 0px;
+
+  font-size: 16px;
+  line-height: 150%;
+  font-weight: 600;
+  color: #FFFFFF;
+}
+
+.button_related_cart {
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+}
