[chore] 상품후기 공지 내 아이콘 삽입 완료 #15

--- a/client/css/page_productDetail.css
+++ b/client/css/page_productDetail.css
@@ -151,7 +151,7 @@
   color: #898989;
 }
 
-.question, .answer, .written-date {
+.question, .answer {
   position: relative;
   left: 36px;
 }
@@ -160,3 +160,4 @@
   position: absolute;
   left: 20px;
 }
+
