--- a/client/css/page_productDetail.css
+++ b/client/css/page_productDetail.css
@@ -286,3 +286,33 @@ body {
   justify-content: center;
   gap: 12px;
 }
+
+/* ---------- [detail] 네비게이션 ---------- */
+.product_navigation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 48px;
+}
+
+.product_navigation button {
+  width: 263.25px;
+  height: 54px;
+  background: #F9F9F9;
+  border: 1px solid #A6A6A6;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 150%;
+  color: #333333;
+}
+
+.product_navigation.is_active {
+  border-width: 1px 1px 0px 1px;
+  border-style: solid;
+  border-color: #E1E1E1;
+  color: #5F0080;
+}
+
+
+
+
