--- a/client/css/reset.css
+++ b/client/css/reset.css
@@ -62,9 +62,17 @@ input {
   font-family: "Pretendard";
 }
 
+input:focus {
+  outline: none;
+}
+
 input[type="search"] {
   -webkit-appearance: none;
   appearance: none;
+}
+
+input[type="text"]:focus, input[type="password"]:focus {
+  border: 1px solid var(--black);
 }
 
 input::-ms-clear,
