--- a/client/css/page_productDetail.css
+++ b/client/css/page_productDetail.css
@@ -1,3 +1,7 @@
+* {
+  font-family: 'Pretendard';
+}
+
 .product-review-wrapper {
   /* background-color: aqua; */
   width: 1050px;
@@ -92,7 +96,6 @@
 }
 
 .notice-content {
-  font-family: 'Pretendard';
   font-style: normal;
   font-weight: 600;
   font-size: 12.003px;
@@ -104,12 +107,12 @@
   border-bottom: 1px solid #E1E1E1;
   background: #F9F9F9;
   position: relative;
+  box-sizing: border-box;
 }
 
 .question {
   width: 974px;
   height: 36px;
-  font-family: 'Pretendard';
   font-style: normal;
   font-weight: 600;
   font-size: 12.003px;
@@ -121,10 +124,10 @@
 }
 
 .answer {
+  margin-top: 20px;
   width: 481px;
   height: 216px;
   /* Label/Small */
-  font-family: 'Pretendard';
   font-style: normal;
   font-weight: 600;
   font-size: 12.003px;
@@ -140,7 +143,6 @@
   height: 18px;
 
   /* Label/Small */
-  font-family: 'Pretendard';
   font-style: normal;
   font-weight: 600;
   font-size: 12.003px;
@@ -159,5 +161,96 @@
 .quest-icon, .ans-icon {
   position: absolute;
   left: 20px;
+ 
 }
 
+.ans-icon {
+  top: 78px;
+}
+
+.is-best {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12.003px;
+  line-height: 150%;
+  color: #FFFFFF;
+  width: 32px;
+  height: 18px;
+  background-color: #BD76FF;
+  padding-left: 8px;
+  padding-right: 8px;
+  border-radius: 1px;
+  border: solid 1px transparent;
+  
+}
+
+.membership-grade {
+  width: 21px;
+  height: 18px;
+  background-color: white;
+  color: #5F0080;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12.003px;
+  line-height: 150%;
+  padding-left: 8px;
+  padding-right: 8px;
+  border-radius: 1px;
+  border: 1px solid #5F0080;
+  margin-left: 8px;
+  margin-right: 8px;
+}
+.product-review-content {
+  font-size: 12.003px;
+  padding: 20px;
+  display: flex;
+  gap: 82px;
+  border-bottom: 1px solid #E1E1E1;
+}
+
+.user-info {
+
+}
+
+.user-info p {
+  /* Label/Small */
+  font-style: normal;
+  font-weight: 600;
+  line-height: 150%;
+  /* identical to box height, or 18px */
+}
+
+.product-info {
+  color:#898989;
+  font-weight: 600;
+  line-height: 150%;
+}
+
+.review-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+  margin-left: 82px;
+  width: 151px;
+  height: 114px;
+}
+
+.written-review {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.prev-next-btn {
+  text-align: center;
+}
+
+.prev {
+  background-image: none;
+}
+
+.next {
+  background-image: none;
+}
