--- a/client/css/common.css
+++ b/client/css/common.css
@@ -314,7 +314,7 @@
   width: 16px;
   height: 14px;
   margin-right: 12px;
-  top: -2px;
+  top: -1 px;
 }
 
 .burger {
@@ -372,24 +372,26 @@
   color: var(--purple);
 }
 
-footer {
-  padding-top: 28px;
+.footer_wrap {
+  border-top: 1px solid var(--gray-100);
 }
 
-.consumer_wrap {
+.information_wrap {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
-  margin-bottom: 32px;
+  margin-top: 32px;
 }
 
 .consumer_title {
   font-size: 21px;
   font-weight: 700;
   color: var(--content);
+  display: block;
 }
 
 .consumer_number {
+  display: block;
   font-size: 38px;
   font-weight: 700;
   color: var(--content);
@@ -453,14 +455,14 @@ footer {
   display: flex;
 }
 
-.company_menu {
+.company_policy a {
   margin-left: 14px;
   font-size: 16px;
   font-weight: 400;
   color: var(--content);
 }
 
-.company_menu:first-child {
+.company_policy a:first-child {
   margin-left: 0;
 }
 
@@ -485,7 +487,6 @@ footer {
 
 .company_sns_wrap {
   margin-top: 28px;
-  display: flow-root;
 }
 
 .company_sns {
@@ -503,17 +504,16 @@ footer {
   width: 100%;
 }
 
-.alliance {
+.alliance_wrap {
   border-top: 1px solid var(--gray-100);
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   justify-content: space-between;
-  width: 100%;
   padding: 24px 0 32px;
 }
 
-.alliance button {
+.alliance_btn {
   display: flex;
   align-items: flex-start;
   text-align: left;
@@ -521,42 +521,42 @@ footer {
   line-height: 16px;
 }
 
-.isms_btn {
-  width: 217px;
-}
-
-.eprivacy_btn {
-  width: 222px;
-}
-
-.payment_btn {
-  width: 270px;
-}
-
-.wooribank_btn {
-  width: 283px;
-}
-
-.alliance button p {
+.alliance_btn p {
   font-size: 10px;
   font-weight: 400;
   color: var(--content);
   word-break: break-word;
 }
 
-.isms_btn img, .eprivacy_btn img, .wooribank_btn img {
+.alliance_btn img {
   width: 34px;
   height: 34px;
   margin-right: 8px;
 }
 
-.payment_btn img{
+.alliance_payment img{
   width: 102px;
   height: 32px;
   margin-right: 8px;
 }
 
-.copyright {
+.alliance_isms {
+  width: 217px;
+}
+
+.alliance_eprivacy {
+  width: 222px;
+}
+
+.alliance_payment{
+  width: 270px;
+}
+
+.alliance_wooribank {
+  width: 283px;
+}
+
+.copyright_wrap {
   width: 100%;
   height: 108px;
   background: var(--gray-50);
