[chore] 장바구니 css 마크업 #20

--- a/client/css/cart.css
+++ b/client/css/cart.css
@@ -56,7 +56,7 @@ h2.cart_title {
 /* -------------------------------------------------------------------------- */
 .list_title {
   /* background-color: green; */
-  padding: 14px 7px;
+  padding: 14px 0px;
   display: flex;
   flex-direction: row;
 }
@@ -154,4 +154,119 @@ button.close_btn img {
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+/* -------------------------------------------------------------------------- */
+/*                              payment_container                             */
+/* -------------------------------------------------------------------------- */
+.payment_container {
+  /* background-color: skyblue; */
+  margin-top: 44px;
+  width: 284px;
+}
+
+.shipping_address {
+  padding: 20px;
+  border-bottom: 1px solid var(--gray-100);
+  box-shadow: 1px 0px 8px 1px var(--gray-100);
+}
+
+.shipping_address .title {
+  background: url(../assets/icons/cart/location.svg) no-repeat;
+  background-position: left center;
+  font-size: 16px;
+  width: 78px;
+  height: 36px;
+  padding: 9px 0 0 30px;
+}
+
+.shipping_address .address {
+  margin: 12px 0;
+}
+
+.shipping_address .deliver {
+  color: var(--purple);
+  font-size: 12px;
+  font-weight: 600;
+  margin-bottom: 12px;
+}
+
+.change_address {
+  background-color: transparent;
+  width: 244px;
+  height: 44px;
+  border: 1px solid var(--purple);
+  border-radius: 4px;
+}
+
+.change_address .btn_text {
+  color: var(--purple);
+  font-weight: 600;
+}
+
+.price_box {
+  box-shadow: 1px 0px 8px 1px var(--gray-100);
+  background: var(--gray-50);
+  padding: 20px;
+}
+
+.product_amount,
+.discount_amount,
+.shipping_amount {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.discount_amount {
+  margin: 16px 0;
+}
+
+.shipping_amount {
+  border-bottom: 1px dashed var(--gray-100);
+  padding-bottom: 16px;
+}
+
+.scheduled_payment {
+  padding-top: 24px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.accumulate {
+  text-align: right;
+  margin-top: 18px;
+  font-size: 12px;
+  font-weight: 600;
+}
+
+.accumulate_badge {
+  background: var(--accent-yellow);
+  color: var(--white);
+  padding: 3px 8px;
+  margin-right: 5px;
+  border-radius: 1px;
+}
+
+.order_btn {
+  box-shadow: 1px 2px 5px 2px var(--gray-100);
+  background: var(--purple);
+  color: var(--white);
+  font-size: 16px;
+  width: 100%;
+  height: 44px;
+  margin: 16px 0;
+  border-radius: 4px;
+}
+
+.notice {
+  font-size: 12px;
+  letter-spacing: -0.2px;
+  color: var(--gray-400);
+  padding-bottom: 80px;
+}
+
+.notice li {
+  line-height: 150%;
 }
