--- a/client/css/cart.css
+++ b/client/css/cart.css
@@ -1,7 +1,3 @@
-.cart_wrap {
-  /* background-color: gold; */
-}
-
 h2.cart_title {
   margin-top: 80px;
   text-align: center;
@@ -18,13 +14,16 @@ h2.cart_title {
 /*                               .cart_container                              */
 /* -------------------------------------------------------------------------- */
 .cart_container {
-  /* background-color: skyblue; */
   margin-top: 44px;
   width: 742px;
 }
+
 .select_menu {
-  /* background-color: orange; */
   padding: 16px 0;
+}
+
+.select_menu img {
+  margin-top: -3px;
 }
 
 .select_menu:last-child {
@@ -32,7 +31,7 @@ h2.cart_title {
 }
 
 .select_all {
-  margin: 0 17px 0 8px;
+  margin: 0px 17px 0 8px;
   position: relative;
 }
 
@@ -55,7 +54,6 @@ h2.cart_title {
 /*                                  cart_list                                 */
 /* -------------------------------------------------------------------------- */
 .list_title {
-  /* background-color: green; */
   padding: 14px 0px;
   display: flex;
   flex-direction: row;
@@ -117,13 +115,11 @@ button.close_btn img {
 .product_name {
   font-weight: 600;
   width: 320px;
-  /* outline: 2px solid red; */
 }
 
 .count_box {
   border: 1px solid #c4c4c4;
   border-radius: 5px;
-  /* outline: 2px solid red; */
 }
 
 .minus_btn,
@@ -140,13 +136,11 @@ button.close_btn img {
   width: 127px;
   text-align: right;
   font-weight: 600;
-  /* outline: 2px solid red; */
 }
 
 .delete_btn {
   width: 30px;
   height: 30px;
-  /* outline: 2px solid red; */
   background-color: transparent;
 }
 
@@ -160,7 +154,6 @@ button.close_btn img {
 /*                              payment_container                             */
 /* -------------------------------------------------------------------------- */
 .payment_container {
-  /* background-color: skyblue; */
   margin-top: 44px;
   width: 284px;
 }
