--- a/client/css/login.css
+++ b/client/css/login.css
@@ -14,19 +14,13 @@
   margin-top: 44px;
 }
 
-.id_input {
-  width: 100%;
-  padding: 12px 20px;
-  border: 1px solid var(--gray-300);
-  border-radius: 4px;
-}
-
 .passwordForm_group {
   margin-top: 12px;
 }
 
-.password_input {
+.id_input, .password_input {
   width: 100%;
+  height: 50px;
   padding: 12px 20px;
   border: 1px solid var(--gray-300);
   border-radius: 4px;
