--- a/client/css/common.css
+++ b/client/css/common.css
@@ -278,7 +278,7 @@
   display: none;
   position: absolute;
   width: 84px;
-  padding-top: 30px;
+  padding-top: 26px;
 }
 
 .category:hover ul {
@@ -511,6 +511,7 @@
   align-items: flex-start;
   justify-content: space-between;
   padding: 24px 0 32px;
+  margin-top: 32px;
 }
 
 .alliance_btn {
