--- a/client/css/reset.css
+++ b/client/css/reset.css
@@ -62,6 +62,14 @@ input {
   font-family: "Pretendard";
 }
 
+input:focus {
+  outline: none;
+}
+
+input[type="text"]:focus, input[type="password"]:focus {
+  border: 1px solid var(--black);
+}
+
 input[type="search"] {
   -webkit-appearance: none;
   appearance: none;
